--- a/ffar250_site/about.html
+++ b/ffar250_site/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
   <!-- CSS -->
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
   <!-- Navigation links -->
@@ -36,7 +38,12 @@
   </figure>
 
   <p class="aboutDescription">
-    Hello! I’m your typical, run-of-the-mill Computation Arts student from Montreal. Most of my work is done in front of a computer, in the comfort of my home. I am interested in game creation, as well as urban scenery. I also enjoy the process of editing photos and videos in order to create fun or strange narratives. I am inspired by 90s PC games, the <i>Vaporwave</i> aesthetic and dark fantasy stories, to name a few. My work often deals with the struggle of living, the need for affection and the impact loneliness can have on an individual. Despite these rough themes, my compositions are usually lighthearted in nature. I create my work by using various editing software. <i>Adobe Photoshop</i> is used for image creation and photo modification. Video creation and editing is done with both <i>Adobe After Effects</i> and <i>Premiere Pro</i>. I’ve also made games using software such as <i>bitsy</i>, <i>Unity</i> and <i>Atom</i>. My work process is simple: I first make a rough outline of an idea and then get feedback from peers and teachers, if possible. Next, I begin creating the imagery I need using the aforementioned editing software. After all the necessary imagery is done, I combine them into a narrative and submit my work. I produce art in order to discover myself, change and grow as a person and acquire the motivation to create passion projects that I can be proud of.
+    Hello! I’m your typical, run-of-the-mill Computation Arts student from Montreal. Most of my work is done in front of a computer, in the comfort of my home. I am interested in game creation, as well as urban scenery. I also enjoy the process of
+    editing photos and videos in order to create fun or strange narratives. I am inspired by PC games from the 90s, the <i>Vaporwave</i> aesthetic, dark fantasy stories and classical paintings, to name a few. My work often deals with the struggle of
+    living, the need for affection and the impact loneliness can have on an individual. Despite these rough themes, my compositions are usually lighthearted in nature. I create my work by using various editing software. <i>Adobe Photoshop</i> is used
+    for image creation and photo modification. Video creation and editing is done with both <i>Adobe After Effects</i> and <i>Premiere Pro</i>. I’ve also made games using software such as <i>bitsy</i>, <i>Unity</i> and <i>Atom</i>. My work process is
+    simple: I first make a rough outline of an idea and then get feedback from peers and teachers, if possible. Next, I begin creating the imagery I need using the aforementioned editing software. After all the necessary imagery is done, I combine
+    them into a narrative and submit my work. I produce art in order to discover myself, change and grow as a person and acquire the motivation to create passion projects that I can be proud of.
   </p>
 
   <!-- The video -->
@@ -46,4 +53,5 @@
 
 
 </body>
+
 </html>
