--- a/ffar250_site/prompt1.html
+++ b/ffar250_site/prompt1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,15 +10,8 @@
   <!-- CSS -->
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body class="prompt1Body">
-  <!-- Adding the main header -->
-  <!-- <header class="mainHeader">
-    <a href="index.html">
-      <h1>
-        FFAR 250
-      </h1>
-    </a>
-  </header> -->
 
   <!-- Navigation links -->
   <!-- Active link cannot be clicked on -->
@@ -38,8 +32,10 @@
 
   <article class="prompt1Description">
     <p>
-      Whether using programs such as Photoshop, bitsy or Atom, the creation and usage of files is always an integral part in producing art. The files can take the shape of many different forms, from photos, to text and even videos. These different clumps of data can then be combined and remixed into new kinds of pieces. Most importantly of all, the created pieces can be easily preserved and accessed thanks to the advent of USB keys, cloud storage and digital portfolios.
+      Whether using programs such as Photoshop, bitsy or Atom, the creation and usage of files is always an integral part in producing art. The files can take the shape of many different forms, from photos, to text and even videos. These different
+      clumps of data can then be combined and remixed into new kinds of pieces. Most importantly of all, the created pieces can be easily preserved and accessed thanks to the advent of USB keys, cloud storage and digital portfolios.
     </p>
   </article>
 </body>
+
 </html>
