Added a Prompt 2 section

--- a/ffar250_site/credits.html
+++ b/ffar250_site/credits.html
@@ -27,7 +27,7 @@
     <a href="index.html">index</a>
     <a href="about.html">about</a>
     <a href="prompt1.html">prompt 1</a>
-    <a href="">prompt 2</a>
+    <a href="prompt2.html">prompt 2</a>
     <a href="">prompt 3</a>
     <a href="credits.html" class="active">credits</a>
   </nav>
