--- a/ffar250_site/about.html
+++ b/ffar250_site/about.html
@@ -19,7 +19,7 @@
     <a href="index.html">index</a>
     <a href="about.html" class="active">about</a>
     <a href="prompt1.html">prompt 1</a>
-    <a href="">prompt 2</a>
+    <a href="prompt2.html">prompt 2</a>
     <a href="">prompt 3</a>
     <a href="credits.html">credits</a>
   </nav>
