--- a/ffar250_site/prompt1.html
+++ b/ffar250_site/prompt1.html
@@ -19,7 +19,7 @@
     <a href="index.html">index</a>
     <a href="about.html">about</a>
     <a href="prompt1.html" class="active">prompt 1</a>
-    <a href="">prompt 2</a>
+    <a href="prompt2.html">prompt 2</a>
     <a href="">prompt 3</a>
     <a href="credits.html">credits</a>
   </nav>
