--- a/ffar250_site/credits.html
+++ b/ffar250_site/credits.html
@@ -28,7 +28,7 @@
     <a href="about.html">about</a>
     <a href="prompt1.html">prompt 1</a>
     <a href="prompt2.html">prompt 2</a>
-    <a href="">prompt 3</a>
+    <a href="prompt3.html">prompt 3</a>
     <a href="credits.html" class="active">credits</a>
   </nav>
 
@@ -37,7 +37,7 @@
   </h1>
 
   <p>
-    General code help from Santo Romano (CART 211 circa 2020).
+    "show-on-scroll.js" code from Santo Romano (CART 211 circa 2020). Also provided general help.
   </p>
 
   <p>
