--- a/ffar250_site/index.html
+++ b/ffar250_site/index.html
@@ -28,13 +28,12 @@
     <a href="about.html">about</a>
     <a href="prompt1.html">prompt 1</a>
     <a href="prompt2.html">prompt 2</a>
-    <a href="">prompt 3</a>
+    <a href="prompt3.html">prompt 3</a>
     <a href="credits.html">credits</a>
   </nav>
 
   <h1 class="indexText">
-    Hello!
-    This site is a work in progress!
+    Hi! My name is [REDACTED] and this site is a hub for my FFAR 250 Prompt Portfolio! Click on one of the links above to get started!
   </h1>
 </body>
 
