--- a/ffar250_site/prompt2.html
+++ b/ffar250_site/prompt2.html
@@ -20,7 +20,7 @@
     <a href="about.html">about</a>
     <a href="prompt1.html">prompt 1</a>
     <a href="prompt2.html" class="active">prompt 2</a>
-    <a href="">prompt 3</a>
+    <a href="prompt3.html">prompt 3</a>
     <a href="credits.html">credits</a>
   </nav>
 
