--- a/ffar250_site/prompt1.html
+++ b/ffar250_site/prompt1.html
@@ -32,7 +32,7 @@
 
   <article class="prompt1Description">
     <p>
-      Whether using programs such as Photoshop, bitsy or Atom, the creation and usage of files is always an integral part in producing art. The files can take the shape of many different forms, from photos, to text and even videos. These different
+      Whether using programs such as Photoshop, bitsy or Atom, the creation and usage of files is always an integral part of producing art. The files can take the shape of many different forms, from photos, to text, to even videos. These different
       clumps of data can then be combined and remixed into new kinds of pieces. Most importantly of all, the created pieces can be easily preserved and accessed thanks to the advent of USB keys, cloud storage and digital portfolios.
     </p>
   </article>
