--- a/ffar250_site/prompt2.html
+++ b/ffar250_site/prompt2.html
@@ -33,7 +33,7 @@
 
   <article class="prompt1Description">
     <p>
-      <i>Parameters</i> is a game where the goal is to defeat all monsters (represented by yellow boxes). Progress is done by leveling up, purchasing equipment and unlocking quests by obtaining keys from slain beasts.
+      <i>Parameters</i> is a game where the goal is to defeat all monsters (represented by yellow boxes). Progress is done by leveling up, purchasing equipment and unlocking quests by obtaining keys from slain beasts. Quests are black boxes which slowly fill up over time by continuously clicking on them. Once the box reaches 100%, players can obtain experience and gold, which will help them towards defeating monsters. Clicking on an enemy will cause both it and the user to lose health; battles are ultimately decided by how powerful the player’s stats are. Should the player win, they are then allowed to loot the monster’s corpse for an endless amount of money. Said money can be used to purchase the aforementioned equipment and even extra keys, should the user get stuck. 
     </p>
 
     <p>
