--- a/ffar250_site/prompt3.html
+++ b/ffar250_site/prompt3.html
@@ -28,10 +28,12 @@
 
   <!-- Opening Statement -->
   <article class="prompt3Article show-on-scroll">
-    <p class="aboutDescription">
-      It’s the end of the Fall Semester. It sucks. At this point I’m so stressed that I might just puke at any minute. As the weeks go by and my brain slowly implodes, I’ll use this opportunity to illustrate by feelings each day for a week. This
-      small deviation from my normal routine of assignments, commitments and existential dread should help to calm my nerves, even for a little bit.
+    <div class="aboutDescription">
+    <p>
+      It’s the end of the Fall Semester. It sucks. At this point I’m so stressed that I might just puke at any minute. As the weeks go by and my brain slowly implodes, I’ll use this opportunity to illustrate by feelings each day for a week. In addition, I will also make note of my sleep schedule. This
+      small deviation from my normal routine of assignments, commitments and existential dread should help to calm my nerves, even for a little bit. It can also allow me to become more aware of my overall health.
     </p>
+    </div>
   </article>
 
   <!-- Tenets -->
@@ -43,11 +45,11 @@
     </p>
 
     <p>
-      2. A caption will accompany said illustration, usually about the context of how the picture was made.
+      2. A caption will accompany said illustration, usually about the context of how the picture was made. The captions will be free-written in order to stay true to my current mood at the time of writing.
     </p>
 
     <p>
-      3. I will make note of the times when I slept to when I woke up. With this, I should have a better grasp of my sleep schedule.
+      3. I will make note of the times from when I sleep to when I wake up.
     </p>
     </div>
   </article>
@@ -84,8 +86,8 @@
     </figure>
 
     <p class="aboutDescription">
-      Normal day. Could not stop thinking about the poor drawing quality of Day 2. This day’s picture is more-or-less the same, but I like the expression of my avatar. Assignments and personal drama keep me anxious but I’m managing. Woke up very
-      early today (slept around 10:30pm, woke up around 4: 30am); felt drowsy all day, but a short nap made me feel a little better.
+      Normal day. Could not stop thinking about the poor drawing quality of Day 2. This day’s picture is more-or-less the same, but I like the expression of my avatar. Assignments and personal drama keep me anxious, but I’m managing. Woke up very
+      early today (slept around 10:30pm, woke up around 4: 30am). Felt drowsy all day, but a short nap made me feel a little better.
     </p>
   </article>
 
@@ -151,7 +153,7 @@
 
     <div class="aboutDescription">
       <p>
-        I didn’t get any sleep (10:40pm to 2:40am). I slept and woke up for rapidly for four hours until I finally got out of bed and made breakfast. Did not feel good for the entire day. Felt like I was going to have a heart attack every hour or so;
+        I didn’t get any sleep (10:40pm to 2:40am). I slept and woke up rapidly for four hours until I finally got out of bed and made breakfast. Did not feel good for the entire day. Felt like I was going to have a heart attack every hour or so;
         wasn’t feeling very hungry either. I can’t help but feel that good sleep is reserved for the privileged.
       </p>
 
@@ -168,7 +170,7 @@
       </p>
 
       <p>
-        If you’re struggling out there, persevere, but also remember to get a good night’s sleep! It can be tough to do so, but I’m sure it will keep you energized and ready to tackle the day!
+        If you’re struggling out there, persevere, but also remember to get a good night’s sleep! If you can do it, you’ll be energized and ready to tackle the day!
       </p>
 
       <p class="yellowText">
