--- a/ffar250_site/prompt3.html
+++ b/ffar250_site/prompt3.html
@@ -30,7 +30,7 @@
   <article class="prompt3Article show-on-scroll">
     <div class="aboutDescription">
     <p>
-      It’s the end of the Fall Semester. It sucks. At this point I’m so stressed that I might just puke at any minute. As the weeks go by and my brain slowly implodes, I’ll use this opportunity to illustrate by feelings each day for a week. In addition, I will also make note of my sleep schedule. This
+      It’s the end of the Fall Semester. It sucks. At this point I’m so stressed that I might just puke at any minute. As the weeks go by and my brain slowly implodes, I’ll use this opportunity to illustrate my feelings each day for a week. In addition, I will also make note of my sleep schedule. This
       small deviation from my normal routine of assignments, commitments and existential dread should help to calm my nerves, even for a little bit. It can also allow me to become more aware of my overall health.
     </p>
     </div>
@@ -41,7 +41,7 @@
     <h1>Tenets</h1>
     <div class="aboutDescription">
     <p>
-      1. I will draw one illustration a day. The illustration can be anything from an event that happened to me on a particular day to my overall feelings of a certain moment in a day.
+      1. I will draw one illustration a day. The illustration can be anything from an event that happened to me on a particular day to my overall feelings of a certain moment.
     </p>
 
     <p>
@@ -153,7 +153,7 @@
 
     <div class="aboutDescription">
       <p>
-        I didn’t get any sleep (10:40pm to 2:40am). I slept and woke up rapidly for four hours until I finally got out of bed and made breakfast. Did not feel good for the entire day. Felt like I was going to have a heart attack every hour or so;
+        I didn’t get any sleep (10:40pm to 2:40am). I slept and woke up rapidly for four more hours until I finally got out of bed and made breakfast. Did not feel good for the entire day. Felt like I was going to have a heart attack every hour or so;
         wasn’t feeling very hungry either. I can’t help but feel that good sleep is reserved for the privileged.
       </p>
 
