Updated site titles

--- a/ffar250_site/credits.html
+++ b/ffar250_site/credits.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!-- Title -->
-  <title>FFAR 250</title>
+  <title>FFAR 250 Prompt Portfolio</title>
   <!-- CSS -->
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -16,7 +16,7 @@
   <header class="mainHeader">
     <a href="index.html">
       <h1>
-        FFAR 250
+        FFAR 250 Prompt Portfolio
       </h1>
     </a>
   </header>
